--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <aside>
             <center>
                 <div id="relative">
-                    <!-- <img src="캡처.PNG" style="display: block; margin: 0 auto; width:250px; height:300px;" alt=""> -->
+                    <!-- <img src="./캡처.PNG" style="display: block; margin: 0 auto; width:250px; height:300px;" alt=""> -->
                     <img src="캡처(2).PNG" class="relative" alt="">
                     <br><br><br>
                     <p id="namecard">코딩할때 내 모습.jpg</p>
@@ -180,7 +180,7 @@
                         <div class="row">
                             <div class="col-3">
                                 <div class="card">
-                                    <img src="캡처.PNG" class="card-img-top" alt="...">
+                                    <img src="./캡처.PNG" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Enjoying the dance</h5>
                                         <p class="card-text"></p>
@@ -191,7 +191,7 @@
                             </div>
                             <div class="col-3">
                                 <div class="card">
-                                    <img src="캡처.PNG" class="card-img-top" alt="...">
+                                    <img src="./캡처.PNG" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Listening to music</h5>
                                         <p class="card-text"></p>
@@ -201,7 +201,7 @@
                             </div>
                             <div class="col-3">
                                 <div class="card">
-                                    <img src="캡처.PNG" class="card-img-top" alt="...">
+                                    <img src="./캡처.PNG" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Shopping for clothes</h5>
                                         <p class="card-text"></p>
@@ -212,7 +212,7 @@
                             </div>
                             <div class="col-3">
                                 <div class="card">
-                                    <img src="캡처.PNG" class="card-img-top" alt="...">
+                                    <img src="./캡처.PNG" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Drinking coffee</h5>
                                         <p class="card-text"></p>
