--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
         <aside>
             <center>
                 <div id="relative">
-                    <!-- <img src="./캡처.PNG" style="display: block; margin: 0 auto; width:250px; height:300px;" alt=""> -->
-                    <img src="캡처(2).PNG" class="relative" alt="">
+                    <img src="./캡처(2).PNG" class="relative" alt="">
                     <br><br><br>
                     <p id="namecard">코딩할때 내 모습.jpg</p>
                 </div>
